...
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="96dp">

                <!-- RecyclerView for Services -->
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/servicesRecyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:overScrollMode="never"
                    android:clipToPadding="false"/>
...
        app:cardElevation="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <Button
            android:id="@+id/nextButton"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:background="@drawable/rounded_button"
            android:text="Next"
            android:textColor="#FFFFFF"
            android:textSize="16sp"
...
